--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,281 @@
-.wrapper {
-  height: 1147px;
-  width: 1010px;
-  background: white;
-}
 body {
   background: #f7f7f7;
+}
+.film__img {
+  width: 60px;
+  height: 91px;
+  margin: 6px 13px 10px 10px;
+}
+.wrapper {
+  min-width: 420px;
+  background: white;
+}
+.film__title-progress {
+  width: 100%;
+}
+.filmTab {
+  margin-left: auto;
+  margin-right: auto;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center; */
+}
+.film__title {
+  font-family: Inter UI;
+  font-size: 20px;
+  line-height: 28px;
+  text-align: left;
+  /* width: 250px; */
+  height: 28px;
+  margin: 0;
+  margin-bottom: 7px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.film__title-progress {
+  margin-top: 4px;
+  width: 298px;
+  justify-content: space-between;
+}
+.film__date {
+  font-family: Inter UI;
+  font-size: 12px;
+  line-height: 22px;
+  text-align: left;
+  color: #827e7e;
+  margin: 0;
+  margin-bottom: 7px;
+}
+.film__genres {
+  font-family: Inter;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 14.52px;
+  text-align: left;
+  margin-bottom: 16px;
+}
+.list-item {
+  width: 100%;
+  height: 245px;
+  display: flex;
+  flex-direction: column;
+}
+.film__overview {
+  /* @font-size-sm: 12px; */
+  width: 367px;
+  height: 86px;
+  margin: 0;
+  margin-left: -73px;
+  /* margin-bottom: 20px; */
+  gap: 0px;
+  opacity: 0px;
+  text-align: justify;
+  font-family: 'Inter UI';
+  font-size: 12px;
+  line-height: 22px;
+  text-align: left;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  white-space: pre-wrap;
+}
+.film__container {
+  /* background-color: blue; */
+  width: 388px;
+  height: 245px;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: 0px 4px 12px 0px #00000026;
+  /* position: absolute; */
+}
+.search__input {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 3;
+  margin-bottom: 10px;
+  width: 388px;
+}
+
+.footer__pagination {
+  width: fit-content;
+  margin-top: 5px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.film__rate {
+  margin-top: auto;
+  margin-bottom: 10px;
+  margin-left: auto;
+  margin-right: 10px;
+}
+/* @media (min-width: 576px) {
+  .list-item {
+    box-sizing: border-box;
+    width: 45%;
+    height: 70%;
+    margin: 10px 20px;
+    
+  }
+  .film__img {
+    width: 183px;
+    height: 280px;
+  }
+  .film__overview {
+    display: -webkit-box;
+    -webkit-line-clamp: 6;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    white-space: pre-wrap;
+  }
+} */
+
+@media (min-width: 768px) {
+  .film-list__list-element {
+    padding: 0 36px;
+  }
+  .search__input {
+    width: 700px;
+    height: 40px;
+    margin-bottom: 34px;
+  }
+  .film__img {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+  }
+  .film__container {
+    /* min-width: 200px; */
+    margin: 0;
+    max-width: 370px;
+    height: 279px;
+  }
+  .film__genres {
+    margin-bottom: 7px;
+    width: 165px;
+    max-height: 50px;
+    overflow-y: auto;
+    scrollbar-width: thin;
+    scrollbar-color: white rgb(234, 232, 232);
+  }
+
+  .list-item {
+    margin: 0;
+    margin-left: 20px;
+    max-width: 45%;
+    /* max-width: 170px; */
+    height: 100%;
+  }
+  .film__overview {
+    /* box-sizing: border-box; */
+    margin: 0;
+    width: fit-content;
+    /* max-width: 50%; */
+    margin-right: 20px;
+    height: 129px;
+
+    display: -webkit-box;
+    -webkit-line-clamp: 6;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    white-space: pre-wrap;
+  }
+  .film__rate {
+    font-size: 10px;
+    margin: 0;
+    height: 10px;
+    margin-top: auto;
+    /* margin-right: 8px; */
+    margin-left: -13px;
+    margin-bottom: 10px;
+  }
+  .film__title-progress {
+    box-sizing: border-box;
+    width: 100%;
+
+    -webkit-margin-top-collapse: 10px;
+  }
+  .film__title {
+    /* margin: 0; */
+    width: 60%;
+    margin-bottom: 7px;
+  }
+  .film__date {
+    margin-bottom: 4px;
+  }
+  .film__progress {
+    margin-right: 10px;
+  }
+  .footer__pagination {
+    margin-top: 36px;
+  }
+}
+@media (min-width: 1010px) {
+  .filmTab {
+    width: 1010px;
+  }
+  .search__input {
+    width: 938px;
+    height: 40px;
+    margin-bottom: 34px;
+  }
+  .film__img {
+    width: 183px;
+    height: 280px;
+    margin: 0;
+  }
+  .film__container {
+    min-width: 451px;
+    height: 279px;
+  }
+  .film__genres {
+    margin-bottom: 7px;
+    width: 228px;
+  }
+  .list-item {
+    margin: 0;
+    margin-left: 20px;
+    width: 250px;
+    max-width: 100%;
+    height: 100%;
+  }
+  .film__overview {
+    margin: 0;
+    width: fit-content;
+    margin-right: 20px;
+    height: 129px;
+
+    display: -webkit-box;
+    -webkit-line-clamp: 6;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    white-space: pre-wrap;
+  }
+  .film__rate {
+    font-size: 16px;
+    margin: 0;
+    margin-top: auto;
+    margin-right: 10px;
+    margin-bottom: 10px;
+  }
+  .film__title-progress {
+    box-sizing: border-box;
+    min-width: 250px;
+
+    -webkit-margin-top-collapse: 10px;
+  }
+  .film__title {
+    /* margin: 0; */
+    margin-bottom: 7px;
+  }
+  .film__date {
+    margin-bottom: 4px;
+  }
+  .film__progress {
+    margin-right: 10px;
+  }
+  .footer__pagination {
+    margin-top: 36px;
+  }
 }
