--- a/src/index.css
+++ b/src/index.css
@@ -11,22 +11,22 @@ body {
   margin: 0 auto;
   background: white;
 }
+.spinner {
+  margin: 30px auto;
+  width: fit-content;
+}
 .film__title-progress {
   width: 100%;
 }
 .filmTab {
   margin-left: auto;
   margin-right: auto;
-  /* display: flex;
-  flex-direction: column;
-  justify-content: center; */
 }
 .film__title {
   font-family: Inter UI;
   font-size: 20px;
   line-height: 28px;
   text-align: left;
-  /* width: 250px; */
   height: 28px;
   margin: 0;
   margin-bottom: 7px;
@@ -63,12 +63,10 @@ body {
   flex-direction: column;
 }
 .film__overview {
-  /* @font-size-sm: 12px; */
   width: 367px;
   height: 86px;
   margin: 0;
   margin-left: -73px;
-  /* margin-bottom: 20px; */
   gap: 0px;
   opacity: 0px;
   text-align: justify;
@@ -83,13 +81,11 @@ body {
   white-space: pre-wrap;
 }
 .film__container {
-  /* background-color: blue; */
   width: 388px;
   height: 245px;
   margin-left: auto;
   margin-right: auto;
   box-shadow: 0px 4px 12px 0px #00000026;
-  /* position: absolute; */
 }
 .search__input {
   margin-left: auto;
@@ -111,26 +107,6 @@ body {
   margin-left: auto;
   margin-right: 10px;
 }
-/* @media (min-width: 576px) {
-  .list-item {
-    box-sizing: border-box;
-    width: 45%;
-    height: 70%;
-    margin: 10px 20px;
-    
-  }
-  .film__img {
-    width: 183px;
-    height: 280px;
-  }
-  .film__overview {
-    display: -webkit-box;
-    -webkit-line-clamp: 6;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    white-space: pre-wrap;
-  }
-} */
 
 @media (min-width: 768px) {
   .film-list__list-element {
@@ -147,9 +123,8 @@ body {
     margin: 0;
   }
   .film__container {
-    /* min-width: 200px; */
     margin: 0 auto;
-    /* margin: 0; */
+
     max-width: 370px;
     height: 279px;
   }
@@ -166,14 +141,13 @@ body {
     margin: 0;
     margin-left: 20px;
     max-width: 45%;
-    /* max-width: 170px; */
+
     height: 100%;
   }
   .film__overview {
-    /* box-sizing: border-box; */
     margin: 0;
     width: fit-content;
-    /* max-width: 50%; */
+
     margin-right: 20px;
     height: 129px;
 
@@ -188,18 +162,16 @@ body {
     margin: 0;
     height: 10px;
     margin-top: auto;
-    /* margin-right: 8px; */
+
     margin-left: -13px;
     margin-bottom: 10px;
   }
   .film__title-progress {
     box-sizing: border-box;
     width: 100%;
-
     -webkit-margin-top-collapse: 10px;
   }
   .film__title {
-    /* margin: 0; */
     width: 60%;
     margin-bottom: 7px;
   }
@@ -218,13 +190,9 @@ body {
     width: 1010px;
     background: white;
   }
-  /* .filmTab {
-    width: 1010px;
-  } */
+
   .search__input {
     width: 938px;
-    height: 40px;
-    margin-bottom: 34px;
   }
   .film__img {
     width: 183px;
@@ -233,31 +201,15 @@ body {
   }
   .film__container {
     min-width: 451px;
-    height: 279px;
   }
   .film__genres {
-    margin-bottom: 7px;
     width: 228px;
   }
   .list-item {
-    margin: 0;
-    margin-left: 20px;
     width: 250px;
     max-width: 100%;
-    height: 100%;
   }
-  .film__overview {
-    margin: 0;
-    width: fit-content;
-    margin-right: 20px;
-    height: 129px;
 
-    display: -webkit-box;
-    -webkit-line-clamp: 6;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    white-space: pre-wrap;
-  }
   .film__rate {
     font-size: 16px;
     margin: 0;
@@ -268,20 +220,5 @@ body {
   .film__title-progress {
     box-sizing: border-box;
     min-width: 250px;
-
-    -webkit-margin-top-collapse: 10px;
-  }
-  .film__title {
-    /* margin: 0; */
-    margin-bottom: 7px;
-  }
-  .film__date {
-    margin-bottom: 4px;
-  }
-  .film__progress {
-    margin-right: 10px;
-  }
-  .footer__pagination {
-    margin-top: 36px;
   }
 }
