--- a/src/index.css
+++ b/src/index.css
@@ -68,7 +68,6 @@ body {
   margin: 0;
   margin-left: -73px;
   gap: 0px;
-  opacity: 0px;
   text-align: justify;
   font-family: 'Inter UI';
   font-size: 12px;
@@ -90,7 +89,7 @@ body {
 .search__input {
   margin-left: auto;
   margin-right: auto;
-  margin-top: 3;
+  margin-top: 3px;
   margin-bottom: 10px;
   width: 388px;
 }
@@ -147,10 +146,8 @@ body {
   .film__overview {
     margin: 0;
     width: fit-content;
-
     margin-right: 20px;
     height: 129px;
-
     display: -webkit-box;
     -webkit-line-clamp: 6;
     -webkit-box-orient: vertical;
